--- a/lesson-3/tasks/task4.html
+++ b/lesson-3/tasks/task4.html
@@ -29,15 +29,12 @@
     let workerAgeRange = 60
 
 
-    if (1 <= personAge && personAge <= 120) {
-      if (personAge <= childAgeRange) alert('Дитина')
-      else if (personAge <= schoolboyAgeRange) alert('Школяр')
-      else if (personAge <= studentAgeRange) alert('Студент')
-      else if (personAge <= workerAgeRange) alert('Працівник')
-      else alert('Пенсіонер')
-    }
-    else
-      document.write('Введено некоректний вік')
+    if (personAge < 1 || personAge > 120) result = 'Некоректний вік'
+    else if (personAge <= childAgeRange) alert('Дитина')
+    else if (personAge <= schoolboyAgeRange) alert('Школяр')
+    else if (personAge <= studentAgeRange) alert('Студент')
+    else if (personAge <= workerAgeRange) alert('Працівник')
+    else alert('Пенсіонер')
 
 
   </script>
