--- a/lesson-3/tasks/task5.html
+++ b/lesson-3/tasks/task5.html
@@ -40,7 +40,8 @@
         break;
     }
 
-    document.write(`Можна керувати : <strong>${result}.</strong>`)
+    if (result)
+      document.write(`Можна керувати : <strong>${result}.</strong>`)
 
 
   </script>
