--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         </ul>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-5/index.html">ДЗ №5</a>
+      </h2>
+    </li>
   </ol>
 </body>
+
 
 </html>
