--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -51,7 +51,7 @@
         </p>
       </div>
     </li> -->
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task2.html">Задача 2</a>
       </h3>
@@ -60,8 +60,8 @@
           Створити 10 елементів для введення цін продуктів
         </p>
       </div>
-    </li>
-    <li>
+    </li> -->
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task3.html">Задача 3</a>
       </h3>
@@ -70,8 +70,8 @@
           Вивести таблицю з одним рядком і 7 стовпцями.
         </p>
       </div>
-    </li>
-    <li>
+    </li> -->
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task4.html">Задача 4</a>
       </h3>
@@ -80,7 +80,7 @@
           Вивести таблицю з 3 рядків і 7 стовпців
         </p>
       </div>
-    </li>
+    </li> -->
     <li>
       <h3>
         <a target="_blank" href="./tasks/task5.html">Задача 5</a>
@@ -101,16 +101,37 @@
         </p>
       </div>
     </li>
-    <!-- <li>
+    <li>
       <h3>
-        <a target="_blank" href="./tasks/task7.html">Задача 7</a>
+        <a target="_blank" href="./tasks/task10.html">Задача 10</a>
       </h3>
       <div>
         <p>
-          Вивести на екран N абзаців (N вводиться користувачем) за зразком:
+          Знайти суму всіх непарних чисел, що знаходяться між заданими користувачем числами.
         </p>
       </div>
-    </li> -->
+    </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task11.html">Задача 11</a>
+      </h3>
+      <div>
+        <p>
+          Знайти суму 5 непарних чисел, що знаходяться між заданими користувачем числами.
+        </p>
+      </div>
+    </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task13.html">Задача 13</a>
+      </h3>
+      <div>
+        <p>
+          Морський бій. Комп’ютер випадково розташовує одиночний корабель на полі розміром N*M. Маючи К снарядів
+          користувач намагається потопити корабель.
+        </p>
+      </div>
+    </li>
 
   </ol>
 </body>
