--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -81,7 +81,7 @@
         </p>
       </div>
     </li> -->
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task5.html">Задача 5</a>
       </h3>
@@ -90,7 +90,7 @@
           Вивести таблицю
         </p>
       </div>
-    </li>
+    </li> -->
     <li>
       <h3>
         <a target="_blank" href="./tasks/task6.html">Задача 6</a>
@@ -129,6 +129,18 @@
         <p>
           Морський бій. Комп’ютер випадково розташовує одиночний корабель на полі розміром N*M. Маючи К снарядів
           користувач намагається потопити корабель.
+        </p>
+      </div>
+    </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task14.html">Задача 14</a>
+      </h3>
+      <div>
+        <p>
+          Каса. Користувачу повідомляють суму, яку йому треба сплатити. Користувач поступово вводить суму грошей до тих
+          пір, поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму
+          потрібно ввести).
         </p>
       </div>
     </li>
