--- a/lesson-5/tasks/task10.html
+++ b/lesson-5/tasks/task10.html
@@ -21,12 +21,17 @@
   <script>
 
 
-    let firstNum = parseInt(prompt('Введіть початкове число:'))
+    let firstNum = parseInt(prompt('Введіть початкове число:')) + 1
     let lastNum = parseInt(prompt('Введіть кінцеве число:'))
     let sumUnpaired = 0
+    if (lastNum < firstNum) {
+      let intermediate = firstNum
+      firstNum = lastNum + 1
+      lastNum = intermediate - 1
+    }
 
     firstNum % 2 !== 0 ? true : firstNum += 1
-    for (let unpairedNum = firstNum; unpairedNum <= lastNum; unpairedNum += 2) {
+    for (let unpairedNum = firstNum; unpairedNum < lastNum; unpairedNum += 2) {
       sumUnpaired += unpairedNum
     }
     document.write(`Сума непарних чисел = ${sumUnpaired}`)
