--- a/lesson-5/tasks/task6.html
+++ b/lesson-5/tasks/task6.html
@@ -30,9 +30,9 @@
     document.write(`<div class='table'>`)
     for (let i = 0; i < 3; i++) {
       document.write(`<table border='4px'>`)
-      for (let i = 0; i < 3; i++) {
+      for (let j = 0; j < 3; j++) {
         document.write('<tr>')
-        for (let i = 0; i < 3; i++) {
+        for (let h = 0; h < 3; h++) {
           document.write(`<td>${tableValueNum}</td>`)
           tableValueNum++
         }
