--- a/lesson-5/tasks/task4.html
+++ b/lesson-5/tasks/task4.html
@@ -25,8 +25,8 @@
     document.write(`<table border='4px'>`)
     for (let i = 0; i < 3; i++) {
       document.write('<tr>')
-      for (let i = 1; i <= 7; i++) {
-        document.write(`<td>${i}</td>`)
+      for (let j = 1; j <= 7; j++) {
+        document.write(`<td>${j}</td>`)
       }
       document.write('</tr>')
     }
