--- a/lesson-5/tasks/task5.html
+++ b/lesson-5/tasks/task5.html
@@ -25,7 +25,7 @@
     document.write(`<table border='4px'>`)
     for (let i = 0; i < 3; i++) {
       document.write('<tr>')
-      for (let i = 0; i < 3; i++) {
+      for (let j = 0; j < 3; j++) {
         document.write(`<td>${num}</td>`)
         num++
       }
