--- a/lesson-5/index.html
+++ b/lesson-5/index.html
@@ -91,13 +91,44 @@
         </p>
       </div>
     </li> -->
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task6.html">Задача 6</a>
       </h3>
       <div>
         <p>
           Вивести 3 таблиці (по 3 рядки і 3 стовпці у кожній) за зразком
+        </p>
+      </div>
+    </li>
+    <li> -->
+    <!-- <li>
+      <h3>
+        <a target="_blank" href="./tasks/task7.html">Задача 7</a>
+      </h3>
+      <div>
+        <p>
+          Вивести на екран N абзаців (N вводиться користувачем) за зразком:
+        </p>
+      </div>
+    </li> -->
+    <!-- <li>
+      <h3>
+        <a target="_blank" href="./tasks/task8.html">Задача 8</a>
+      </h3>
+      <div>
+        <p>
+          Користувач загадує число. За 3 спроби комп’ютер намагається вгадати число користувача (використати confirm).
+        </p>
+      </div>
+    </li> -->
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task9.html">Задача 9</a>
+      </h3>
+      <div>
+        <p>
+          Користувач загадує число. Комп’ютер задає питання поки не вгадає число користувача (використати confirm).
         </p>
       </div>
     </li>
@@ -111,7 +142,7 @@
         </p>
       </div>
     </li>
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task11.html">Задача 11</a>
       </h3>
@@ -120,7 +151,7 @@
           Знайти суму 5 непарних чисел, що знаходяться між заданими користувачем числами.
         </p>
       </div>
-    </li>
+    </li> -->
     <li>
       <h3>
         <a target="_blank" href="./tasks/task13.html">Задача 13</a>
@@ -141,6 +172,27 @@
           Каса. Користувачу повідомляють суму, яку йому треба сплатити. Користувач поступово вводить суму грошей до тих
           пір, поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму
           потрібно ввести).
+        </p>
+      </div>
+    </li>
+    <!-- <li>
+      <h3>
+        <a target="_blank" href="./tasks/task15.html">Задача 15</a>
+      </h3>
+      <div>
+        <p>
+          Користувача поступово вводить показники температури протягом року. Знайти середню температуру.
+        </p>
+      </div>
+    </li> -->
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task16.html">Задача 16</a>
+      </h3>
+      <div>
+        <p>
+          Користувач поступово вводить прибуток магазину за кожен день протягом N тижнів. Знайти загальну величину
+          прибутку та вивести величину прибутку протягом кожного окремого тижня.
         </p>
       </div>
     </li>
