--- a/lesson-5/tasks/task7.html
+++ b/lesson-5/tasks/task7.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task 7</title>
+
 </head>
 
 <body>
@@ -19,22 +20,14 @@
   </div>
 
   <script>
+    let paragraphNum = parseInt(prompt('Введіть к-сть параграфів :'))
 
-    let num = 1
-    document.write(`<div class='table'>`)
-    for (let i = 0; i < 3; i++) {
-      document.write(`<table border='4px'>`)
-      for (let i = 0; i < 3; i++) {
-        document.write('<tr>')
-        for (let i = 0; i < 3; i++) {
-          document.write(`<td>${num}</td>`)
-          num++
-        }
-        document.write('</tr>')
+    for (let i = 1; i <= paragraphNum; i++) {
+      document.write(`<h1>Заголовок ${i}</h1>`)
+      for (let j = 1; j <= i; j++) {
+        document.write(`<p>Розділ ${i}, параграф ${j}</p>`)
       }
-      document.write('</table>')
     }
-    document.write('</div>')
 
   </script>
 
