--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         <a target="_blank" href="./lesson-5/index.html">ДЗ №5</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-6/index.html">ДЗ №6</a>
+      </h2>
+    </li>
   </ol>
 </body>
 
