--- a/lesson-6/index.html
+++ b/lesson-6/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ДЗ №6</title>
   <style>
+    .task0 p,
     .task2 p,
     .task2-1 p,
     .task3-1 p,
@@ -15,6 +16,7 @@
       margin: 0;
     }
 
+    .task0,
     .task2,
     .task3,
     .task4,
@@ -34,22 +36,24 @@
   <h1>ДЗ №6</h1>
   <ol>
 
-    <!-- <li>
+    <li>
       <h3>
         <a target="_blank" href="./tasks/task0.html">Задача 0</a>
       </h3>
       <div>
         <p>
           Вивести на екран
-          A B C D E
-          B C D E F
-          C D E F G
-          D E F G H
-          E F G H I
-
         </p>
+        <div class="task0">
+          <p>A B C D E</p>
+          <p>B C D E F</p>
+          <p>C D E F G</p>
+          <p>D E F G H</p>
+          <p>E F G H I</p>
+
+        </div>
       </div>
-    </li> -->
+    </li>
     <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task1.html">Задача 1</a>
@@ -79,7 +83,7 @@
         </div>
       </div>
     </li>-->
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task2_1.html">Задача 2.1</a>
       </h3>
@@ -96,7 +100,7 @@
           <p>ооооооо</p>
         </div>
       </div>
-    </li>
+    </li> -->
     <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task3.html">Задача 3</a>
@@ -140,7 +144,7 @@
 
       </div>
     </li>
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task4.html">Задача 4</a>
       </h3>
@@ -167,7 +171,7 @@
         </div>
 
       </div>
-    </li>
+    </li> -->
     <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task5.html">Задача 5</a>
@@ -180,7 +184,7 @@
         </p>
       </div>
     </li> -->
-    <li>
+    <!-- <li>
       <h3>
         <a target="_blank" href="./tasks/task6.html">Задача 6</a>
       </h3>
@@ -190,7 +194,7 @@
           допомогою циклів суму, яку він одержить
         </p>
       </div>
-    </li>
+    </li> -->
     <li>
       <h3>
         <a target="_blank" href="./tasks/task7.html">Задача 7</a>
@@ -219,11 +223,49 @@
           <p>i 1 2 3 ..i</p>
           <p>23 1 2 3 .. 22 23</p>
         </div>
-
-
-
       </div>
     </li> -->
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task10.html">Задача 10</a>
+      </h3>
+      <div>
+        <p>Вивести на екран </p>
+        <div class="task9">
+          <p>1 1</p>
+          <p>2 1234</p>
+          <p>3 123456789</p>
+          <p>4 1234...16</p>
+          <p>5 1 ... 25</p>
+          <p>6 1 ... 36</p>
+        </div>
+      </div>
+    </li>
+    <!-- <li>
+      <h3>
+        <a target="_blank" href="./tasks/task11.html">Задача 11</a>
+      </h3>
+      <div>
+        Вивести на екран усі двоцифрові числа, у яких перша цифра є більшою або рівною за другу.
+      </div>
+    </li>
+    <li> -->
+    <h3>
+      <a target="_blank" href="./tasks/task11-1.html">Задача 11.1</a>
+    </h3>
+    <div>
+      Вивести на екран усі трицифрові числа, у яких перша цифра є більшою або рівною за суму другої і третьої.
+    </div>
+    </li>
+    <li>
+      <h3>
+        <a target="_blank" href="./tasks/task12.html">Задача 12</a>
+      </h3>
+      <div>
+        Написати програму виведення на екран кожного символу латинського алфавіту та поруч з кожним з них символу, що
+        передує йому та що слідує за ним.
+      </div>
+    </li>
 
   </ol>
 </body>
