--- a/lesson-6/tasks/task10.html
+++ b/lesson-6/tasks/task10.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Task 9</title>
+  <title>Task 10</title>
   <style>
     .task9 p {
       margin: 0;
@@ -19,18 +19,17 @@
 
 <body>
 
-  <h1>Задача 9</h1>
+  <h1>Задача 10</h1>
 
   <div>
     <p>Вивести на екран </p>
     <div class="task9">
       <p>1 1</p>
-      <p>2 1 2</p>
-      <p>3 1 2 3</p>
-      <p>4 1 2 3 4</p>
-      <p>…</p>
-      <p>i 1 2 3 ..i</p>
-      <p>23 1 2 3 .. 22 23</p>
+      <p>2 1234</p>
+      <p>3 123456789</p>
+      <p>4 1234...16</p>
+      <p>5 1 ... 25</p>
+      <p>6 1 ... 36</p>
     </div>
 
 
@@ -42,8 +41,9 @@
 
     for (let i = 1; i <= number; i++) {
       document.write(i + ' ')
-      for (let j = 1; j <= i; j++) {
-        document.write(j + ' ')
+      let finalValue = i * i
+      for (let j = 1; j <= finalValue; j++) {
+        document.write(j)
       }
       document.write('<br>')
     }
