--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <a target="_blank" href="./lesson-6/index.html">ДЗ №6</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-7/index.html">ДЗ №7</a>
+      </h2>
+    </li>
   </ol>
 </body>
 
