--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <li>
       <h2>
         <a target="_blank" href="./lesson-3/index.html">ДЗ №3</a>
-        <ul>
-          <li>
-            <h5>
-              <a target="_blank" href="./lesson-3/task_dop.html">Додаткові задачі ДЗ №3</a>
-            </h5>
-          </li>
-        </ul>
       </h2>
+      <ul>
+        <li>
+          <h5>
+            <a target="_blank" href="./lesson-3/task_dop.html">Додаткові задачі ДЗ №3</a>
+          </h5>
+        </li>
+      </ul>
     </li>
     <li>
       <h2>
@@ -45,6 +45,11 @@
     <li>
       <h2>
         <a target="_blank" href="./lesson-7/index.html">ДЗ №7</a>
+      </h2>
+    </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-8/index.html">ДЗ №8</a>
       </h2>
     </li>
   </ol>
