--- a/lesson-7/index.html
+++ b/lesson-7/index.html
@@ -83,7 +83,7 @@
       </h3>
       <p>
         Створити функцію, яка виводить банер (у функцію передаються: зображення, заголовок та посилання, куди переходимо
-        при кліку на зображення (тег img повине знаходитись у середині тега a: <a> <img src=”шлях”> </a>
+        при кліку на зображення (тег img повине знаходитись у середині тега a: <a> <img src=”шлях” alt=""> </a>
       </p>
     </li>
     <li>
@@ -104,7 +104,7 @@
         додатних показів температури.
       </p>
     </li>
-
+  </ol>
 </body>
 
 </html>
